Add Linux and AMD support to the OpenCL filter example
Change-Id: I1ea91f93677c53322c3867db6069e4362c58cebd
Reviewed-by: Yoann Lopes <yoann.lopes@theqtcompany.com>

--- a/examples/multimedia/video/qmlvideofilter_opencl/README
+++ b/examples/multimedia/video/qmlvideofilter_opencl/README
@@ -1,18 +1,18 @@
-This example performs some simple OpenCL operations on camera or video input which
-is assumed to be provided in RGB format. The OpenCL operation is done on an
-OpenGL texture using CL-GL interop, without any further readbacks or copies
+This example performs some simple OpenCL operations on camera or video input
+which is assumed to be provided in RGB format. The OpenCL operation is done on
+an OpenGL texture using CL-GL interop, without any further readbacks or copies
 (except for the initial texture upload, when necessary).
 
-Currently only OS X and Windows with desktop OpenGL (opengl32.dll) are supported.
-On Windows you may need to edit testplugin.pro to specify the location of the OpenCL
-headers and libraries.
+Currently OS X, Windows with real OpenGL (opengl32.dll) and Linux (GLX only) are
+supported. Note that an OpenCL implementation with GPU support is required. The
+platform and device selection logic supports NVIDIA, AMD and Intel. Porting to
+other platforms is probably simple, see clCreateContextFromType.
 
-Note that an OpenCL implementation with GPU support is required.
-The platform and device selection logic supports NVIDIA and Intel.
-Porting to other platforms is probably simple, see clCreateContextFromType.
-Note however that YUV formats, that are commonly used also for camera input
-on some platforms, are not supported in this example.
+On Windows you may need to edit testplugin.pro to specify the location of the
+OpenCL headers and libraries.
+
+YUV formats are not supported in this example. This is probably not an issue an
+OS X and Windows, but will most likely disable the example on Linux.
 
 Pass the name of a video file to perform video playback or launch without
 arguments to use the camera.
-
