Improvide device selection in the video filter example
The non-OS X path also uses clGetGLContextInfoKHR when available,
instead of just blindly taking the first GPU device for the platform.

This way we get the correct OpenCL device in case the application is using an
OpenGL context on the same vendor's second GPU.

On Windows desktop OpenGL is now correctly forced and therefore there is
no need to waste time on runtime checks for ANGLE later on.

Remove the hard-coded custom pathes from the .pro file.

Also fixes error reporting on the OS X specific path.

Change-Id: I8d6ab867510d113d5135b61e66822381e81c995a
Reviewed-by: Yoann Lopes <yoann.lopes@theqtcompany.com>

--- a/examples/multimedia/video/qmlvideofilter_opencl/README
+++ b/examples/multimedia/video/qmlvideofilter_opencl/README
@@ -3,13 +3,10 @@ which is assumed to be provided in RGB format. The OpenCL operation is done on
 an OpenGL texture using CL-GL interop, without any further readbacks or copies
 (except for the initial texture upload, when necessary).
 
-Currently OS X, Windows with real OpenGL (opengl32.dll) and Linux (GLX only) are
+Currently OS X, Windows with real OpenGL (opengl32.dll) and Linux (GLX) are
 supported. Note that an OpenCL implementation with GPU support is required. The
 platform and device selection logic supports NVIDIA, AMD and Intel. Porting to
 other platforms is probably simple, see clCreateContextFromType.
-
-On Windows you may need to edit testplugin.pro to specify the location of the
-OpenCL headers and libraries.
 
 YUV formats are not supported in this example. This is probably not an issue an
 OS X and Windows, but will most likely disable the example on Linux.
